Fix Stage 20E corpus diagnostic record validation